--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -40,3 +40,44 @@
   padding-top: 20px;
   padding-left: 0px;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-left: 0px;
+  margin-right: -1px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown {
+  color: white;
+}
+
+.dropdown a {
+  color: white;
+}
+
+.mystuff-dropdown a {
+  width: 80px;
+}
+
+.btn-blue {
+  background-color: blue !important;
+  color: white !important;
+}
