Created tests and form to edit an offer listings, created the model and tests for Offer class

--- a/marketapp/listings/templates/listings/offer_listings.html
+++ b/marketapp/listings/templates/listings/offer_listings.html
@@ -15,7 +15,12 @@
   <ul>
     {% for listing in offerlistings %}
       <li>
-        <a href="{{ listing.get_absolute_url }}">{{ listing.name }}</a>
+        <a href="{{ listing.get_absolute_url }}">{{ listing.name }}</a> |
+        {% if listing.listingEnded %}
+          <a href="#">RELIST</a>
+        {% else %}
+          <a href="{% url 'update-offer-listing' pk=listing.pk %}">EDIT</a>
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
