--- a/marketapp/listings/templates/listings/offer_listing_detail.html
+++ b/marketapp/listings/templates/listings/offer_listing_detail.html
@@ -1,5 +1,27 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  h
+  <h2 class="listing-header">{{ offerlisting.name }}</h2>
+  <div class="listing-item-container">
+    {% if offerlisting.items %}
+      {% if offerlisting.items.all.count > 1 %}
+        {% for item in offerlisting.items.all %}
+          <div class="item-count">{{ forloop.counter }}</div>
+          <div class="item-name">{{ item.name }}</div>
+        {% endfor %}
+      {% else %}
+        {% with offerlisting.items.all.all|first as item %}
+          <div class="item-display">
+            {% if item.images %}
+              {% with item.images.all|first as image %}
+                <div class="item-image"><img src="{{ image.image.url }}" style="width: 200px; height: 200px;"></img></div>
+              {% endwith %}
+            {% endif %}
+            <div class="item-name"><h5>{{ item.name }}</h5></div>
+            <div class="item-description">{{ item.description }}</div>
+          </div>
+        {% endwith %}
+      {% endif %}
+    {% endif %}
+  </div>
 {% endblock %}
