--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -100,10 +100,20 @@
 
 .listing-header {
   text-align: center;
+  border-bottom: 1px solid grey;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .listing-item-container {
   text-align: center;
+  border-bottom: 1px solid grey;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+}
+
+.listing-item-container-header {
+  margin-bottom: 20px;
 }
 
 .item-display {
@@ -112,7 +122,15 @@
   color: black;
   padding: 10px;
   border-radius: 20px;
-  width: 300px;
+  width: 200px;
+  height: 200px;
+  box-shadow: 5px 5px 10px 0px;
+  margin-left: 15px;
+}
+
+.item-count {
+  text-align: left;
+  font-weight: bold;
 }
 
 .item-image {
@@ -123,4 +141,30 @@
   text-align: center;
   font-style: italic;
   font-weight: bold;
+}
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.listing-btn {
+  width: 125px;
+}
+
+.listing-details {
+  margin-bottom: 10px;
+}
+
+.detail {
+  text-align: center;
+}
+
+.multiple-items {
+  height: 225px;
+}
+
+.expired-listing {
+  color: red;
 }
